Update remaining `asList` issues
Signed-off-by: currantw <taylor.curran@improving.com>