@@ -24,6 +24,7 @@ import static org.opensearch.sql.data.type.ExprCoreType.UNDEFINED;
 import static org.opensearch.sql.expression.function.BuiltinFunctionName.CAST_TO_BOOLEAN;
 
 import com.google.common.collect.ImmutableList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.apache.commons.lang3.StringUtils;
@@ -96,7 +97,7 @@ class BuiltinFunctionRepositoryTest {
 
     repo.compile(
         functionProperties,
-        List.of(dataSourceFunctionResolver),
+        Collections.singletonList(dataSourceFunctionResolver),
         mockFunctionName,
         List.of(mockExpression));
     verify(functionExpressionBuilder, times(1)).apply(eq(functionProperties), any());
@@ -114,7 +115,8 @@ class BuiltinFunctionRepositoryTest {
     BuiltinFunctionRepository repo = new BuiltinFunctionRepository(mockMap);
     repo.register(mockfunctionResolver);
 
-    assertEquals(functionExpressionBuilder, repo.resolve(List.of(), functionSignature));
+    assertEquals(
+        functionExpressionBuilder, repo.resolve(Collections.emptyList(), functionSignature));
   }
 
   @Test
@@ -122,7 +124,8 @@ class BuiltinFunctionRepositoryTest {
     when(mockExpression.toString()).thenReturn("string");
     FunctionImplementation function =
         repo.resolve(
-                List.of(), registerFunctionResolver(CAST_TO_BOOLEAN.getName(), TIMESTAMP, BOOLEAN))
+                Collections.emptyList(),
+                registerFunctionResolver(CAST_TO_BOOLEAN.getName(), TIMESTAMP, BOOLEAN))
             .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("cast_to_boolean(string)", function.toString());
   }
@@ -132,7 +135,8 @@ class BuiltinFunctionRepositoryTest {
     when(mockFunctionName.getFunctionName()).thenReturn("mock");
     when(mockExpression.toString()).thenReturn("string");
     FunctionImplementation function =
-        repo.resolve(List.of(), registerFunctionResolver(mockFunctionName, STRING, STRING))
+        repo.resolve(
+                Collections.emptyList(), registerFunctionResolver(mockFunctionName, STRING, STRING))
             .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("mock(string)", function.toString());
   }
@@ -142,7 +146,8 @@ class BuiltinFunctionRepositoryTest {
     when(mockFunctionName.getFunctionName()).thenReturn("mock");
     when(mockExpression.toString()).thenReturn("byte");
     FunctionImplementation function =
-        repo.resolve(List.of(), registerFunctionResolver(mockFunctionName, BYTE, INTEGER))
+        repo.resolve(
+                Collections.emptyList(), registerFunctionResolver(mockFunctionName, BYTE, INTEGER))
             .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("mock(byte)", function.toString());
   }
@@ -157,7 +162,7 @@ class BuiltinFunctionRepositoryTest {
     registerFunctionResolver(CAST_TO_BOOLEAN.getName(), STRING, STRING);
 
     FunctionImplementation function =
-        repo.resolve(List.of(), signature)
+        repo.resolve(Collections.emptyList(), signature)
             .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("mock(cast_to_boolean(string))", function.toString());
   }
@@ -168,7 +173,9 @@ class BuiltinFunctionRepositoryTest {
         assertThrows(
             ExpressionEvaluationException.class,
             () ->
-                repo.resolve(List.of(), registerFunctionResolver(mockFunctionName, BYTE, STRUCT))
+                repo.resolve(
+                        Collections.emptyList(),
+                        registerFunctionResolver(mockFunctionName, BYTE, STRUCT))
                     .apply(functionProperties, ImmutableList.of(mockExpression)));
     assertEquals(error.getMessage(), "Type conversion to type STRUCT is not supported");
   }
@@ -185,7 +192,8 @@ class BuiltinFunctionRepositoryTest {
             ExpressionEvaluationException.class,
             () ->
                 repo.resolve(
-                    List.of(), new FunctionSignature(FunctionName.of("unknown"), List.of())));
+                    Collections.emptyList(),
+                    new FunctionSignature(FunctionName.of("unknown"), List.of())));
     assertEquals("unsupported function name: unknown", exception.getMessage());
   }
 
