@@ -68,6 +68,8 @@ import static org.opensearch.sql.sql.parser.ParserUtils.createSortOption;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -106,7 +108,7 @@ public class AstExpressionBuilder extends OpenSearchSQLParserBaseVisitor<Unresol
 
   @Override
   public UnresolvedExpression visitIdent(IdentContext ctx) {
-    return visitIdentifiers(List.of(ctx));
+    return visitIdentifiers(Collections.singletonList(ctx));
   }
 
   @Override
@@ -116,7 +118,8 @@ public class AstExpressionBuilder extends OpenSearchSQLParserBaseVisitor<Unresol
 
   @Override
   public UnresolvedExpression visitMathExpressionAtom(MathExpressionAtomContext ctx) {
-    return new Function(ctx.mathOperator.getText(), List.of(visit(ctx.left), visit(ctx.right)));
+    return new Function(
+        ctx.mathOperator.getText(), Arrays.asList(visit(ctx.left), visit(ctx.right)));
   }
 
   @Override
@@ -166,21 +169,21 @@ public class AstExpressionBuilder extends OpenSearchSQLParserBaseVisitor<Unresol
   public UnresolvedExpression visitPositionFunction(PositionFunctionContext ctx) {
     return new Function(
         POSITION.getName().getFunctionName(),
-        List.of(visitFunctionArg(ctx.functionArg(0)), visitFunctionArg(ctx.functionArg(1))));
+        Arrays.asList(visitFunctionArg(ctx.functionArg(0)), visitFunctionArg(ctx.functionArg(1))));
   }
 
   @Override
   public UnresolvedExpression visitTableFilter(TableFilterContext ctx) {
     return new Function(
         LIKE.getName().getFunctionName(),
-        List.of(qualifiedName("TABLE_NAME"), visit(ctx.showDescribePattern())));
+        Arrays.asList(qualifiedName("TABLE_NAME"), visit(ctx.showDescribePattern())));
   }
 
   @Override
   public UnresolvedExpression visitColumnFilter(ColumnFilterContext ctx) {
     return new Function(
         LIKE.getName().getFunctionName(),
-        List.of(qualifiedName("COLUMN_NAME"), visit(ctx.showDescribePattern())));
+        Arrays.asList(qualifiedName("COLUMN_NAME"), visit(ctx.showDescribePattern())));
   }
 
   @Override
@@ -199,7 +202,7 @@ public class AstExpressionBuilder extends OpenSearchSQLParserBaseVisitor<Unresol
   public UnresolvedExpression visitWindowFunctionClause(WindowFunctionClauseContext ctx) {
     OverClauseContext overClause = ctx.overClause();
 
-    List<UnresolvedExpression> partitionByList = List.of();
+    List<UnresolvedExpression> partitionByList = Collections.emptyList();
     if (overClause.partitionByClause() != null) {
       partitionByList =
           overClause.partitionByClause().expression().stream()
@@ -207,7 +210,7 @@ public class AstExpressionBuilder extends OpenSearchSQLParserBaseVisitor<Unresol
               .collect(Collectors.toList());
     }
 
-    List<Pair<SortOption, UnresolvedExpression>> sortList = List.of();
+    List<Pair<SortOption, UnresolvedExpression>> sortList = Collections.emptyList();
     if (overClause.orderByClause() != null) {
       sortList =
           overClause.orderByClause().orderByElement().stream()
@@ -267,13 +270,13 @@ public class AstExpressionBuilder extends OpenSearchSQLParserBaseVisitor<Unresol
   public UnresolvedExpression visitLikePredicate(LikePredicateContext ctx) {
     return new Function(
         ctx.NOT() == null ? LIKE.getName().getFunctionName() : NOT_LIKE.getName().getFunctionName(),
-        List.of(visit(ctx.left), visit(ctx.right)));
+        Arrays.asList(visit(ctx.left), visit(ctx.right)));
   }
 
   @Override
   public UnresolvedExpression visitRegexpPredicate(RegexpPredicateContext ctx) {
     return new Function(
-        REGEXP.getName().getFunctionName(), List.of(visit(ctx.left), visit(ctx.right)));
+        REGEXP.getName().getFunctionName(), Arrays.asList(visit(ctx.left), visit(ctx.right)));
   }
 
   @Override
@@ -359,7 +362,7 @@ public class AstExpressionBuilder extends OpenSearchSQLParserBaseVisitor<Unresol
     String functionName = ctx.comparisonOperator().getText();
     return new Function(
         functionName.equals("<>") ? "!=" : functionName,
-        List.of(visit(ctx.left), visit(ctx.right)));
+        Arrays.asList(visit(ctx.left), visit(ctx.right)));
   }
 
   @Override
@@ -574,7 +577,7 @@ public class AstExpressionBuilder extends OpenSearchSQLParserBaseVisitor<Unresol
 
   private List<UnresolvedExpression> getFormatFunctionArguments(GetFormatFunctionCallContext ctx) {
     List<UnresolvedExpression> args =
-        List.of(
+        Arrays.asList(
             new Literal(ctx.getFormatFunction().getFormatType().getText(), DataType.STRING),
             visitFunctionArg(ctx.getFormatFunction().functionArg()));
     return args;
@@ -582,7 +585,7 @@ public class AstExpressionBuilder extends OpenSearchSQLParserBaseVisitor<Unresol
 
   private List<UnresolvedExpression> timestampFunctionArguments(TimestampFunctionCallContext ctx) {
     List<UnresolvedExpression> args =
-        List.of(
+        Arrays.asList(
             new Literal(ctx.timestampFunction().simpleDateTimePart().getText(), DataType.STRING),
             visitFunctionArg(ctx.timestampFunction().firstArg),
             visitFunctionArg(ctx.timestampFunction().secondArg));
@@ -657,7 +660,7 @@ public class AstExpressionBuilder extends OpenSearchSQLParserBaseVisitor<Unresol
 
   private List<UnresolvedExpression> getExtractFunctionArguments(ExtractFunctionCallContext ctx) {
     List<UnresolvedExpression> args =
-        List.of(
+        Arrays.asList(
             new Literal(ctx.extractFunction().datetimePart().getText(), DataType.STRING),
             visitFunctionArg(ctx.extractFunction().functionArg()));
     return args;
